--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "mongodb-api-bridge",
+  "version": "1.0.0",
   "dependencies": {
-    "mongoose": "^8.0.0"
+    "mongodb": "^6.3.0"
   }
 }
